<resources>
    <string name="app_name">Make Your Own Adventure</string>

    <string name="action_settings">Settings</string>

    <string name="SHARED_PREFS">behnen.julia.MakeYourOwnAdventureProject.sharedprefs</string>
    <string name="USERNAME">username</string>
    <string name="LOGGEDIN">loggedin</string>

    <!-- Strings related to login and registration-->
    <string name="title_activity_login">Sign in</string>

    <string name="content_description_logo">Make Your Own Adventure</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm password</string>
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>

    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_email">This email is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_password_confirm">The passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!--Strings related to the main menu-->
    <string name="content_description_story_image">Current story imageUrl</string>
    <string name="action_continue_story">Continue story</string>
    <string name="action_the_story_so_far">The Story So Far</string>
    <string name="action_downloaded_stories">Saved Stories</string>
    <string name="action_my_stories">Create Or Edit Stories</string>
    <string name="action_about">About</string>
    <string name="action_sign_out">Sign out</string>

    <!--Strings related to "My Stories"-->
    <string name="action_create_story">Create story</string>
    <string name="action_upload_story">Upload story</string>
    <string name="text_upload_default_story">
        After you press the button, you can download this story in "Bookmarked Stories"
    </string>

    <!--Strings related to downloading a story-->
    <string name="prompt_author">Author</string>
    <string name="prompt_story_id">Story ID</string>
    <string name="action_get_new_story">Get Story</string>

    <!--Strings related to bookmarked story overview-->
    <string name="action_play_story">Play</string>
    <string name="action_delete_story">Delete</string>

    <!--Stray strings-->
    <string name="label_author">Author: </string>
    <string name="label_story_id">Story ID: </string>
    <string name="label_title">Title: </string>
    <string name="label_description">Description: </string>

    <string name="label_element_id">Element id: </string>
    <string name="label_image_url">Image url: </string>
    <string name="label_is_ending">Is ending: </string>
    <string name="label_choice1_id">Choice 1 element id: </string>
    <string name="label_choice2_id">Choice 2 element id: </string>
    <string name="label_choice1_text">Choice 1 text: </string>
    <string name="label_choice2_text">Choice 2 text: </string>

    <!--Strings related to creating/editing a story-->
    <string name="prompt_title">Title</string>
    <string name="prompt_header_description">Description</string>
    <string name="action_play_test">Play test</string>

    <!--Strings related to displaying a story element-->
    <string name="story_element_image_description">Image showing current story element</string>
    <string name="story_element_main_menu_button">Main Menu</string>
    <string name="story_element_restart_button">Restart</string>

    <!--Strings related to the created story overview-->
    <string name="action_edit_story_info">Edit story info</string>
    <string name="action_edit_story_elements">Edit story elements</string>

    <!--Strings related to saving changes-->
    <string name="save_action">Save</string>
    <string name="cancel_action">Cancel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ending">Ending</string>
    <string name="choice">Choice</string>
    <string name="preview_action">Preview</string>
    <string name="delete_action">Delete</string>
    <string name="prompt_choice1Text">Choice 1 Text</string>
    <string name="prompt_choice2Text">Choice 2 Text</string>
    <string name="prompt_image">Image</string>
    <string name="prompt_choice2Id">Choice 2 Target:</string>
    <string name="prompt_choice1Id">Choice 1 Target:</string>
    <string name="prompt_choice_ending">Choice or Ending</string>

    <string name="prompt_element_description">Description</string>
    <string name="prompt_edit">Edit</string>
    <string name="prompt_delete">Delete</string>
    <string name="prompt_preview">Preview</string>
    <string name="prompt_choice2Target">Choice 2 Target</string>
    <string name="prompt_choice1Target">Choice 1 Target</string>
    <string name="prompt_target">Target</string>
    <string name="prompt_text">Text</string>
    <string name="prompt_choice1">Choice 1</string>
    <string name="prompt_choice2">Choice 2</string>
    <string name="prompt_save">Save</string>
    <string name="prompt_cancel">Cancel</string>
    <string name="prompt_reset">reset</string>
    <string name="label_choice1">Choice 1</string>
    <string name="label_choice2">Choice 2</string>
    <string name="confirm">Okay</string>
    <string name="current_story_image">Current story image</string>
    <string name="about_text">Created by Julia Behnen for TCSS 450.\nVersion: 1.0.</string>
    <string name="contentSharingDialogText">Story uploaded and added to bookmarked stories. Would you like to share it?</string>
    <string name="share_action">Share</string>
    <string name="send_to">Send To</string>

    // Action bar titles
    <string name="about_title">About</string>
    <string name="bookmarked_stories_title">Saved Stories</string>
    <string name="created_story_elements_title">Edit Story Elements</string>
    <string name="created_story_overview_title">Created Story</string>
    <string name="create_edit_stories_title">Created Stories</string>
    <string name="create_new_story_title">Create New Story</string>
    <string name="edit_story_element_title">Edit Story Element</string>
    <string name="get_new_story_title">Save New Story</string>
    <string name="main_menu_title">Make Your Own Adventure</string>
    <string name="register_title">Register</string>
    <string name="sign_in_title">Sign In</string>
    <string name="story_element_title">Play Story</string>
    <string name="preview_title">Preview</string>
    <string name="story_overview_title">Saved Story</string>
    <string name="action_main_menu">Main Menu</string>
    <string name="conflicting_elements">Element cannot be deleted while it is referenced in element(s)</string>
    <string name="async_error">Something went wrong.</string>

    <string-array name="choice_ending_array">
        <item name="prompt_choice">Choice</item>
        <item name="prompt_ending">Ending</item>
    </string-array>

    <string-array name="shared_image_names_array">
        <item>Sky_blue_clouds.jpg</item>
        <item>Sky_grey_clouds.jpg</item>
        <item>Trees.jpg</item>
    </string-array>

</resources>
