<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_author"/>
                <TextView
                    android:id="@+id/created_story_overview_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_story_id"/>
                <TextView
                    android:id="@+id/created_story_overview_story_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_title"/>
                <TextView
                    android:id="@+id/created_story_overview_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_description"/>
                <TextView
                    android:id="@+id/created_story_overview_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:id="@+id/created_story_overview_edit_story_info_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_edit_story_info"/>

            <Button
                android:id="@+id/created_story_overview_edit_story_elements_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_edit_story_elements"/>

            <Button
                android:id="@+id/created_story_overview_play_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_play_story"/>

            <Button
                android:id="@+id/created_story_overview_delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_delete_story"/>

            <Button
                android:id="@+id/created_story_overview_upload_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_upload_story"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>