<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="behnen.julia.makeyourownadventure.GetNewStoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        style="@style/FragmentStyle">

        <EditText
            android:id="@+id/get_new_story_author_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_author"/>

        <EditText
            android:id="@+id/get_new_story_story_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_story_id"/>

        <Button
            android:id="@+id/get_new_story_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_get_new_story"/>

    </LinearLayout>

</ScrollView>
