<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".EditStoryElementFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/edit_story_element_buttons">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            style="@style/FragmentStyle">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_story_element_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_title"/>
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="4dp"
                android:paddingLeft="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/prompt_image"
                    android:textSize="18sp"/>
                <Spinner
                    android:id="@+id/edit_story_element_image_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp"/>

            <ImageView
                android:id="@+id/edit_story_element_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/story_element_image_description"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/edit_story_element_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_element_description"/>
            </android.support.design.widget.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp"/>

            <Spinner
                android:id="@+id/edit_story_element_choice_ending_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp"/>

            <LinearLayout
                android:id="@+id/edit_story_element_choice_elements"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:paddingLeft="4dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_choice1"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_story_element_choice1Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_text"/>
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/edit_story_element_choice1Id_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="18dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:paddingLeft="4dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_choice2"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp"/>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/edit_story_element_choice2Text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_text"/>
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/edit_story_element_choice2Id_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:spinnerMode="dialog"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:id="@+id/edit_story_element_buttons">
        <Button
            android:id="@+id/edit_story_element_preview_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonStyleSmall"
            android:text="@string/prompt_preview"/>
        <Button
            android:id="@+id/edit_story_element_save_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonStyleSmall"
            android:text="@string/prompt_save"/>
        <Button
            android:id="@+id/edit_story_element_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonStyleSmall"
            android:text="@string/prompt_cancel"/>
        <Button
            android:id="@+id/edit_story_element_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/buttonStyleSmall"
            android:text="@string/prompt_delete"/>
    </LinearLayout>

</RelativeLayout>